Fix gap in results and change styling of summary

--- a/assets/js/apps/search/components/filter-summary/FilterSummaryBox.css
+++ b/assets/js/apps/search/components/filter-summary/FilterSummaryBox.css
@@ -1,7 +1,13 @@
-.filter-summary-box__badge, .filter-summarybox__badge--separator {
+.filter-summary-box__badge {
     margin: 0.1rem 0;
     font-weight: normal;
     font-size: 1rem;
+    background-color: #5c5d5e;
+    /* padding:0.35rem; */
+}
+
+.filter-summarybox__badge--op {
+    background-color: #6c757d;
 }
 
 .filter-summarybox__badge--separator {
